# namereplacer

./: Dockerfile  Makefile  README.md  output.txt  pyproject.toml
data/: output.txt
namereplacer/: __main__.py  constants.py
namereplacer/fetchers/: main.py  mapping.csv
tests/: test_fetchdata.py  test_fileprocessor.py
